--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cv-builder",
+  "homepage": "https://lenaratushna.github.io/cv-builder/",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -8,12 +9,14 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist"
   },
   "dependencies": {
+    "html2pdf.js": "^0.9.0",
     "pinia": "^3.0.1",
-    "vue": "^3.5.13",
-    "html2pdf.js": "^0.9.0"
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
@@ -21,6 +24,7 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
+    "gh-pages": "^6.3.0",
     "prettier": "^3.5.1",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2"
